--- a/reimbursement_html_vs2/html/style/style.css
+++ b/reimbursement_html_vs2/html/style/style.css
@@ -30,7 +30,7 @@ html {
   
   /* STRUCTURE */
   
-  .wrapper {
+  /* .wrapper {
     display: flex;
     align-items: center;
     flex-direction: column; 
@@ -38,9 +38,9 @@ html {
     width: 100%;
     min-height: 100%;
     padding: 20px;
-  }
+  } */
   
-  #formContent {
+  /* #formContent {
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
@@ -52,16 +52,16 @@ html {
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     text-align: center;
-  }
+  } */
   
-  #formFooter {
+  /* #formFooter {
     background-color: #f6f6f6;
     border-top: 1px solid #dce8f1;
     padding: 25px;
     text-align: center;
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
-  }
+  } */
   
   
   
@@ -79,7 +79,7 @@ html {
   
   
   /* FORM TYPOGRAPHY*/
-  
+/*   
   input[type=button], input[type=submit], input[type=reset]  {
     background-color: #414d60;
     border: none;
@@ -101,20 +101,20 @@ html {
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
   }
-  
-  input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+   */
+  /* input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
     background-color: #748aad;
   }
-  
-  input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+   */
+  /* input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
     -moz-transform: scale(0.95);
     -webkit-transform: scale(0.95);
     -o-transform: scale(0.95);
     -ms-transform: scale(0.95);
     transform: scale(0.95);
   }
-  
-  input[type=text] {
+   */
+  /* input[type=text] {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -136,13 +136,13 @@ html {
   }
   
   input[type=text]:focus {
-    background-color: #fff;
-    border-bottom: 2px solid #5fbae9;
+    /* background-color: #fff; */
+    /* border-bottom: 2px solid #5fbae9;
   }
   
   input[type=text]:placeholder {
     color: #cccccc;
-  }
+  }  */
   
   
   
@@ -262,13 +262,33 @@ html {
   
 
 /*form control css*/
-
-.form-control {
-  width: 60%;
-  margin: 10px auto 10px auto;
+.edit-user-table {
+  margin: 0 auto;
+  padding: 50px;
+  /* margin-bottom: 80px; */
+}
+hr {
+  border: 2px solid #000; 
+}
+h1 {
   text-align: center;
 }
-
+.form-row {
+  background-color: #777;
+  margin: 0 auto;
+  padding: 50px;
+}
+.form-control {
+  width: 40%;
+  margin: 10px auto;
+  /* text-align: center; */
+}
+.input-group-text {
+  width: 80px;
+}
+.custom-select {
+  width: 900px; 
+}
 .password-large {
   font-size: 25px;
 }
@@ -277,13 +297,38 @@ html {
   text-align: center;
 }
 
-.label-center {
-  display: block;
-  width: 50%;
-  margin: auto auto 10px;
-}
+/* label {
+   float: left;
+   text-align: right;
+   font-size: 1rem;
+   color: black;
+   width: 18em;
+   display: block;
+   margin-right: 1em;
+} */
+
+
+/* label { float: left; width: 10em; margin-right: 1em; text-align: right; line-height: 2rem; } */
+
+
 
 .btn-list {
    margin-top: 10px;
 }
 
+
+/**
+Css to fix user tabel
+***/
+
+/* .flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.centered {
+  justify-content: center;
+} */
