--- a/reimbursement_html_vs2/html/login/login.css
+++ b/reimbursement_html_vs2/html/login/login.css
@@ -50,3 +50,11 @@ h1{
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 75%;
+}
