--- a/reimbursement_html_vs2/html/style/style.css
+++ b/reimbursement_html_vs2/html/style/style.css
@@ -1,7 +1,7 @@
 /*Testing */
 
 html {
-    background-color: #414d60;
+    /* background-color: #414d60; */
   }
   
   body {
@@ -25,45 +25,7 @@ html {
     margin: 40px 8px 10px 8px; 
     color: #cccccc;
   }
-  
-  
-  
-  /* STRUCTURE */
-  
-  /* .wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column; 
-    justify-content: center;
-    width: 100%;
-    min-height: 100%;
-    padding: 20px;
-  } */
-  
-  /* #formContent {
-    -webkit-border-radius: 10px 10px 10px 10px;
-    border-radius: 10px 10px 10px 10px;
-    background: #fff;
-    padding: 30px;
-    width: 90%;
-    max-width: 450px;
-    position: relative;
-    padding: 0px;
-    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    text-align: center;
-  } */
-  
-  /* #formFooter {
-    background-color: #f6f6f6;
-    border-top: 1px solid #dce8f1;
-    padding: 25px;
-    text-align: center;
-    -webkit-border-radius: 0 0 10px 10px;
-    border-radius: 0 0 10px 10px;
-  } */
-  
-  
+
   
   /* TABS */
   
@@ -75,76 +37,7 @@ html {
     color: #0d0d0d;
     border-bottom: 2px solid #5fbae9;
   }
-  
-  
-  
-  /* FORM TYPOGRAPHY*/
-/*   
-  input[type=button], input[type=submit], input[type=reset]  {
-    background-color: #414d60;
-    border: none;
-    color: white;
-    padding: 15px 80px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    -webkit-border-radius: 5px 5px 5px 5px;
-    border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-  }
-   */
-  /* input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-    background-color: #748aad;
-  }
-   */
-  /* input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
-    -moz-transform: scale(0.95);
-    -webkit-transform: scale(0.95);
-    -o-transform: scale(0.95);
-    -ms-transform: scale(0.95);
-    transform: scale(0.95);
-  }
-   */
-  /* input[type=text] {
-    background-color: #f6f6f6;
-    border: none;
-    color: #0d0d0d;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 5px;
-    width: 85%;
-    border: 2px solid #f6f6f6;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-    -webkit-border-radius: 5px 5px 5px 5px;
-    border-radius: 5px 5px 5px 5px;
-  }
-  
-  input[type=text]:focus {
-    /* background-color: #fff; */
-    /* border-bottom: 2px solid #5fbae9;
-  }
-  
-  input[type=text]:placeholder {
-    color: #cccccc;
-  }  */
-  
-  
+
   
   /* ANIMATIONS */
   
@@ -248,8 +141,6 @@ html {
     width: 100%;
   }
   
-  
-  
   /* OTHERS */
   
   *:focus {
@@ -259,7 +150,6 @@ html {
   #icon {
     width:60%;
   }
-  
 
 /*form control css*/
 .edit-user-table {
@@ -274,20 +164,18 @@ h1 {
   text-align: center;
 }
 .form-row {
-  background-color: #777;
   margin: 0 auto;
   padding: 50px;
-}
-.form-control {
-  width: 40%;
-  margin: 10px auto;
-  /* text-align: center; */
 }
 .input-group-text {
   width: 80px;
 }
+.input-field {
+  padding: 30px;
+}
 .custom-select {
   width: 900px; 
+  margin: 0 auto;
 }
 .password-large {
   font-size: 25px;
@@ -297,38 +185,19 @@ h1 {
   text-align: center;
 }
 
-/* label {
-   float: left;
-   text-align: right;
-   font-size: 1rem;
-   color: black;
-   width: 18em;
-   display: block;
-   margin-right: 1em;
-} */
-
-
-/* label { float: left; width: 10em; margin-right: 1em; text-align: right; line-height: 2rem; } */
-
-
-
 .btn-list {
    margin-top: 10px;
 }
 
+imgdbz{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 70px;
+  width: 20px;
 
-/**
-Css to fix user tabel
-***/
-
-/* .flex-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
 }
 
-.centered {
-  justify-content: center;
-} */
+#nav-username {
+  color: #fff;
+}
